syntax = "proto3";

option csharp_namespace = "GRPC.Server.Protos";

package blog;

service Blogger {
  rpc GetBlogs (BlogRequest) returns (BlogResponse);
}

message BlogRequest {
  int32 count = 1;
}

message BlogResponse {
  repeated BlogDto blogs = 1;
}

message BlogDto {
  int32 blogId = 1;
  string url = 2;
  repeated PostDto posts = 3;
}

message PostDto {
   int32 postId = 1;
   string title = 2;
   string content = 3;
   int32 blogId = 4;
}
