// Style Guide: https://developers.google.com/protocol-buffers/docs/style 

syntax = "proto3";

package gRPC.server.protos;

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply);
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}
